Add standby task assignment to Streams membership manager (#18077)
Until now the Streams membership manager only processed active tasks. This commit adds the capability to also handle assigned standby tasks.